Issue: Word wrap on postal code paragraph Resolution added: white-space: nowrap; added in rule.

--- a/css/enbridge.css
+++ b/css/enbridge.css
@@ -354,7 +354,8 @@
       font-size: 11px;
       margin: 0;
       padding-left: 0;
-      padding-right: 0; }
+      padding-right: 0;
+      white-space: nowrap; }
     .enbridge-content-container .enbridge-form .zip-code-tool.opened .tool input:not(.enbridge-btn) {
       display: block;
       margin: 0 auto 20px auto;
